--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 										</h2>
 										<div class="button">
 											<a href="#contact" class="btn primary shine"><i class="fa fa-rocket"></i>Hire Me</a>
-											<a href="#portfolio" class="btn shine"><i class="fa fa-briefcase"></i>My Project</a>
+<!-- 											<a href="#portfolio" class="btn shine"><i class="fa fa-briefcase"></i>Blo</a> -->
 										</div>
 									</div>
 								</div>
