--- a/Financial.html
+++ b/Financial.html
@@ -582,8 +582,9 @@
   
 </table>     
 
-
 <br><br>
+
+<a style="margin-bottom:10px" class="btn-app" href="SUMMARY_OF_FINANCIAL_STATEMENT.html" onclick="nar();"/>Generate Cash Flow and Financial Summary</a>
     
 
 
