--- a/SUMMARY_OF_FINANCIAL_STATEMENT.html
+++ b/SUMMARY_OF_FINANCIAL_STATEMENT.html
@@ -402,6 +402,9 @@
 
 <br><br>
 
+<a style="margin-bottom:10px" class="btn-app" href="eligibility_and_ratios.html" onclick="dscr();"/>Calculate Eligibility and Accounting Ratios</a>
+
+
  
 
 </body>
