--- a/eligibility_and_ratios.html
+++ b/eligibility_and_ratios.html
@@ -346,7 +346,9 @@
   </tr>
 </table>
 
+<br><br>
 
+<a style="margin-bottom:10px" class="btn-app" href="emical.html">Calculate EMI</a>
 
 </div>
 </div>
