--- a/Financial.html
+++ b/Financial.html
@@ -82,8 +82,9 @@
                     <li><a href="eligibility_and_ratios.html" onclick="nar();"/><i class="fa fa-history"></i>Eligibility and Accounting Ratios</a></li>
                     <li><a href="emical.html"><i class="fa fa-star"></i>EMI Calculation</a></li>  
                   </ul>
-                  <ul class="social-icon">
-                  </ul>
+                 <ul class="social-icon">
+										<li><a href="#header"><i class="fa fa-plus"></i></a></li>
+									</ul>
                   </div>
               </nav>
               <!--/ End Main Menu -->
