--- a/Financial.html
+++ b/Financial.html
@@ -83,7 +83,7 @@
                     <li><a href="emical.html"><i class="fa fa-star"></i>EMI Calculation</a></li>  
                   </ul>
                  <ul class="social-icon">
-										<li><a href="#header"><i class="fa fa-plus"></i></a></li>
+										<li><a href="#mobile-nav"><i class="fa fa-plus"></i></a></li>
 									</ul>
                   </div>
               </nav>
